--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   },
   "homepage": "https://github.com/firstandthird/docker-compose-to-api#readme",
   "dependencies": {
+    "bytes": "^3.0.0",
+    "joi": "^13.1.2",
+    "joi-docker-compose": "^1.0.0",
     "js-yaml": "^3.10.0",
-    "bytes": "^3.0.0"
+    "ms": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
     "eslint-config-firstandthird": "^4.3.0",
     "eslint-plugin-import": "^2.9.0",
+    "joi-docker-engine": "^1.0.0",
     "tap": "^11.1.1"
   }
 }
